# json_parser

./: .gitignore  README.md  setup.cfg  setup.py
json_parser/: __init__.py  lexer.py  parser.py
tests/: json_lexer_test.py  json_parser_test.py
