[metadata]
name = json_parser
version = 1.2.0
description = A JSON parser written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tusharsadhwani/json_parser
author = Tushar Sadhwani
author_email = tushar.sadhwani000@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
package_dir = =src

[options.packages.find]
where = ./src

[options.extras_require]
dev =
    pytest>=6.2.2
